Switched to using hit counts with result item hashes over history log. Display default results at start based on hit counts.

--- a/Vizr.API.csproj
+++ b/Vizr.API.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="HitCounts.cs" />
+    <Compile Include="JsonConverters\HashConverter.cs" />
     <Compile Include="RenderIssuePreview.cs" />
     <Compile Include="DefaultPreview.cs" />
     <Compile Include="FontAwesomeIcons.cs" />
